<resources>
    <string name="app_name">printIndia</string>
    <string name="welcome">Welcome!</string>
    <string name="machines">Machines</string>
    <string name="router">Router</string>
    <string name="account">Account</string>

    <string name="cutting_plotter">Cutting Plotter</string>
    <string name="printing_solution">Printing solution</string>

    <string name="start_a_new_journey">Start a new Journey</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>